New home page folder

--- a/class 2/Index.html
+++ b/class 2/Index.html
@@ -15,6 +15,7 @@
     <label for="E-mail">E-mail:</label><br>
     <input type="E-mail" id="E-mail" mail="E-mail" value="uchevictor268@gmail.com"><br>
     <input type="submit" value="Submit">
+    <style background-color:rgb(206, 18, 75);></style>
 
     <h2>Radio Buttons</h2>
 
